[package]
name = "hippo"
version = "0.1.0"
authors = ["Josh McSavaney <mcsaucy@csh.rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.5"
hex = "0.4.2"
ring = "0.16.15"

[dependencies.rusqlite]
version = "0.23.1"
features = ["array", "bundled"]
